[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyxi-cloud-api"
version = "0.0.0"
authors = [
  { name="Veldkornet", email="veldkornet@outlook.com" },
]
description = "An async API client for HYXi Cloud."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]
