[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyxi-cloud-api"
version = "0.0.0"
authors = [
  { name="Veldkornet", email="veldkornet@outlook.com" },
]
description = "An async API client for HYXi Cloud."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "hypothesis>=6.100.0",
    "pytest-cov>=5.0.0",
]
