[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyxi-cloud-api"
version = "0.1.8"
authors = [
  { name="Veldkornet", email="veldkornet@outlook.com" },
]
description = "An async API client for HYXi Cloud."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "hypothesis>=6.100.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pylint.messages_control]
disable = ["broad-exception-caught", "too-many-locals", "too-many-return-statements", "too-many-branches", "too-few-public-methods", "protected-access", "unused-argument", "duplicate-code", "import-error"]

[tool.pylint.format]
max-line-length = 120
